qt/gen_qtreeview.h

class QAbstractItemModel;
class QHeaderView;
class QItemSelectionModel;
class QMetaObject;
class QModelIndex;
class QTreeView;
class QWidget;
typedef struct QAbstractItemModel QAbstractItemModel;
typedef struct QActionEvent QActionEvent;
typedef struct QChildEvent QChildEvent;
typedef struct QCloseEvent QCloseEvent;
typedef struct QContextMenuEvent QContextMenuEvent;
typedef struct QDropEvent QDropEvent;
typedef struct QEvent QEvent;
typedef struct QFocusEvent QFocusEvent;
typedef struct QHeaderView QHeaderView;
typedef struct QHideEvent QHideEvent;
typedef struct QInputMethodEvent QInputMethodEvent;
typedef struct QItemSelectionModel QItemSelectionModel;
typedef struct QKeyEvent QKeyEvent;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QModelIndex QModelIndex;
typedef struct QMoveEvent QMoveEvent;
typedef struct QObject QObject;
typedef struct QPaintDevice QPaintDevice;
typedef struct QPaintEngine QPaintEngine;
typedef struct QPainter QPainter;
typedef struct QPoint QPoint;
typedef struct QResizeEvent QResizeEvent;
typedef struct QShowEvent QShowEvent;
typedef struct QSize QSize;
typedef struct QTabletEvent QTabletEvent;
typedef struct QTreeView QTreeView;
typedef struct QWheelEvent QWheelEvent;
typedef struct QWidget QWidget;
bool QTreeView_override_virtual_dragLeaveEvent(void* self, intptr_t slot);
bool QTreeView_override_virtual_dropEvent(void* self, intptr_t slot);
void QTreeView_virtualbase_dropEvent(void* self, QDropEvent* event);
bool QTreeView_override_virtual_focusInEvent(void* self, intptr_t slot);
void QTreeView_virtualbase_focusInEvent(void* self, QFocusEvent* event);
bool QTreeView_override_virtual_focusOutEvent(void* self, intptr_t slot);
void QTreeView_virtualbase_focusOutEvent(void* self, QFocusEvent* event);
bool QTreeView_override_virtual_resizeEvent(void* self, intptr_t slot);
void QTreeView_virtualbase_resizeEvent(void* self, QResizeEvent* event);
bool QTreeView_override_virtual_inputMethodEvent(void* self, intptr_t slot);
void QTreeView_virtualbase_inputMethodEvent(void* self, QInputMethodEvent* event);
bool QTreeView_override_virtual_eventFilter(void* self, intptr_t slot);
bool QTreeView_virtualbase_eventFilter(void* self, QObject* object, QEvent* event);
bool QTreeView_override_virtual_minimumSizeHint(void* self, intptr_t slot);
QSize* QTreeView_virtualbase_minimumSizeHint(const void* self);
bool QTreeView_override_virtual_sizeHint(void* self, intptr_t slot);
QSize* QTreeView_virtualbase_sizeHint(const void* self);
bool QTreeView_override_virtual_setupViewport(void* self, intptr_t slot);
void QTreeView_virtualbase_setupViewport(void* self, QWidget* viewport);
bool QTreeView_override_virtual_wheelEvent(void* self, intptr_t slot);
void QTreeView_virtualbase_wheelEvent(void* self, QWheelEvent* param1);
bool QTreeView_override_virtual_contextMenuEvent(void* self, intptr_t slot);
void QTreeView_virtualbase_contextMenuEvent(void* self, QContextMenuEvent* param1);
bool QTreeView_override_virtual_changeEvent(void* self, intptr_t slot);
void QTreeView_virtualbase_changeEvent(void* self, QEvent* param1);
bool QTreeView_override_virtual_devType(void* self, intptr_t slot);
int QTreeView_virtualbase_devType(const void* self);
bool QTreeView_override_virtual_setVisible(void* self, intptr_t slot);
void QTreeView_virtualbase_setVisible(void* self, bool visible);
bool QTreeView_override_virtual_heightForWidth(void* self, intptr_t slot);
int QTreeView_virtualbase_heightForWidth(const void* self, int param1);
bool QTreeView_override_virtual_hasHeightForWidth(void* self, intptr_t slot);
bool QTreeView_virtualbase_hasHeightForWidth(const void* self);
bool QTreeView_override_virtual_paintEngine(void* self, intptr_t slot);
QPaintEngine* QTreeView_virtualbase_paintEngine(const void* self);
bool QTreeView_override_virtual_keyReleaseEvent(void* self, intptr_t slot);
void QTreeView_virtualbase_keyReleaseEvent(void* self, QKeyEvent* event);
bool QTreeView_override_virtual_enterEvent(void* self, intptr_t slot);
void QTreeView_virtualbase_enterEvent(void* self, QEvent* event);
bool QTreeView_override_virtual_leaveEvent(void* self, intptr_t slot);
void QTreeView_virtualbase_leaveEvent(void* self, QEvent* event);
bool QTreeView_override_virtual_moveEvent(void* self, intptr_t slot);
void QTreeView_virtualbase_moveEvent(void* self, QMoveEvent* event);
bool QTreeView_override_virtual_closeEvent(void* self, intptr_t slot);
void QTreeView_virtualbase_closeEvent(void* self, QCloseEvent* event);
bool QTreeView_override_virtual_tabletEvent(void* self, intptr_t slot);
void QTreeView_virtualbase_tabletEvent(void* self, QTabletEvent* event);
bool QTreeView_override_virtual_actionEvent(void* self, intptr_t slot);
void QTreeView_virtualbase_actionEvent(void* self, QActionEvent* event);
bool QTreeView_override_virtual_showEvent(void* self, intptr_t slot);
void QTreeView_virtualbase_showEvent(void* self, QShowEvent* event);
bool QTreeView_override_virtual_hideEvent(void* self, intptr_t slot);
void QTreeView_virtualbase_hideEvent(void* self, QHideEvent* event);
bool QTreeView_override_virtual_nativeEvent(void* self, intptr_t slot);
bool QTreeView_virtualbase_nativeEvent(void* self, struct miqt_string eventType, void* message, long* result);
bool QTreeView_override_virtual_metric(void* self, intptr_t slot);
int QTreeView_virtualbase_metric(const void* self, int param1);
bool QTreeView_override_virtual_initPainter(void* self, intptr_t slot);
void QTreeView_virtualbase_initPainter(const void* self, QPainter* painter);
bool QTreeView_override_virtual_redirected(void* self, intptr_t slot);
QPaintDevice* QTreeView_virtualbase_redirected(const void* self, QPoint* offset);
bool QTreeView_override_virtual_sharedPainter(void* self, intptr_t slot);
QPainter* QTreeView_virtualbase_sharedPainter(const void* self);
bool QTreeView_override_virtual_childEvent(void* self, intptr_t slot);
void QTreeView_virtualbase_childEvent(void* self, QChildEvent* event);
bool QTreeView_override_virtual_customEvent(void* self, intptr_t slot);
void QTreeView_virtualbase_customEvent(void* self, QEvent* event);
bool QTreeView_override_virtual_connectNotify(void* self, intptr_t slot);
void QTreeView_virtualbase_connectNotify(void* self, QMetaMethod* signal);
bool QTreeView_override_virtual_disconnectNotify(void* self, intptr_t slot);
void QTreeView_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
const QMetaObject* QTreeView_staticMetaObject();
void QTreeView_delete(QTreeView* self);